--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -19,10 +19,10 @@ spring:
             enabled: false
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mariadb://localhost:3306/bibliotheque
+        url: jdbc:mariadb://ersagun.ga:3306/bibliotheque
         name:
-        username: root
-        password: 1992
+        username: 82Tjsw2
+        password: f6-hqBSG
     jpa:
         database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
         database: MYSQL
