--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -24,10 +24,10 @@ spring:
         serialization.indent_output: true
     datasource:
         type: com.zaxxer.hikari.HikariDataSource
-        url: jdbc:mariadb://ersagun.ga:3306/bibliotheque
+        url: jdbc:mariadb://localhost:3306/bibliotheque
         name:
-        username: 82Tjsw2
-        password: f6-hqBSG
+        username: root
+        password: 1992
         hikari:
             data-source-properties:
                 cachePrepStmts: true
